Fix item spacing and font size

--- a/assets/scss/component/navbar.scss
+++ b/assets/scss/component/navbar.scss
@@ -55,6 +55,9 @@ $navbar-height: 8rem;
 #mobile-items {
     display: flex;
     align-items: flex-end;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 0 2rem 2rem 2rem;
+    & > a {
+        font-size: 1.25rem;
+    }
 }
